// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Recursive references in schemas > resulting in a cycle between two components are able to be handled by the includer 1`] = `
"<!-- markdownlint-disable-file -->

<div class="openapi">

# recursiveReferences

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-post);margin-bottom: 12px">

<div class="openapi__request">

POST {.openapi__method}
\`\`\`text translate=no
http://localhost:8080/test
\`\`\`

</div>

Generated server url

</div>

</div>

## Responses

<div class="openapi__response__code__200">

## 200 OK

<div class="openapi-entity">

### Body

{% cut "application/json" %}

\`\`\`json translate=no
{
  "A": {
    "B": null
  }
}
\`\`\`

{% endcut %}

#|
|| **Name** | **Description** ||
||

_A_{.json-schema-reset .json-schema-property}
{.table-cell}|
**Type**: [RecurseMiddle](#Ft7E4Hsg)
{.table-cell}
||
|#{.json-schema-properties}

</div>

<div class="openapi-entity">

### RecurseMiddle {#Ft7E4Hsg}

#|
|| **Name** | **Description** ||
||

_B_{.json-schema-reset .json-schema-property}
{.table-cell}|
**Type**: [RecurseTop](#rTfKnHS4)

{% cut "**Examples**" %}

\`\`\`json translate=no
{
  "A": {
    "B": null
  }
}
\`\`\`

{% endcut %}
{.table-cell}
||
|#{.json-schema-properties}

{% cut "**Examples**" %}

\`\`\`json translate=no
{
  "B": {
    "A": {
      "B": null
    }
  }
}
\`\`\`

{% endcut %}

</div>

</div>

</div>

[*Deprecated]: No longer supported, please use an alternative and newer version."
`;

exports[`Recursive references in schemas > resulting in a trivial self-referential cycle are able to be handled by the includer 1`] = `
"<!-- markdownlint-disable-file -->

<div class="openapi">

# recursiveReferences

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-post);margin-bottom: 12px">

<div class="openapi__request">

POST {.openapi__method}
\`\`\`text translate=no
http://localhost:8080/test
\`\`\`

</div>

Generated server url

</div>

</div>

## Responses

<div class="openapi__response__code__200">

## 200 OK

<div class="openapi-entity">

### Body

{% cut "application/json" %}

\`\`\`json translate=no
{
  "A": null
}
\`\`\`

{% endcut %}

#|
|| **Name** | **Description** ||
||

_A_{.json-schema-reset .json-schema-property}
{.table-cell}|
**Type**: [RecurseTop](#rTfKnHS4)
{.table-cell}
||
|#{.json-schema-properties}

</div>

</div>

</div>

[*Deprecated]: No longer supported, please use an alternative and newer version."
`;

exports[`Recursive references in schemas > where the cycle itself is not trivially referenced are able to be handled by the includer 1`] = `
"<!-- markdownlint-disable-file -->

<div class="openapi">

# recursiveReferences

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-post);margin-bottom: 12px">

<div class="openapi__request">

POST {.openapi__method}
\`\`\`text translate=no
http://localhost:8080/test
\`\`\`

</div>

Generated server url

</div>

</div>

## Responses

<div class="openapi__response__code__200">

## 200 OK

<div class="openapi-entity">

### Body

{% cut "application/json" %}

\`\`\`json translate=no
{
  "A": null
}
\`\`\`

{% endcut %}

#|
|| **Name** | **Description** ||
|#{.json-schema-properties}

</div>

<div class="openapi-entity">

### RecurseTop {#rTfKnHS4}

#|
|| **Name** | **Description** ||
||

_A_{.json-schema-reset .json-schema-property}
{.table-cell}|
**Type**: [RecurseTop](#rTfKnHS4)

{% cut "**Examples**" %}

\`\`\`json translate=no
{
  "A": null
}
\`\`\`

{% endcut %}
{.table-cell}
||
|#{.json-schema-properties}

{% cut "**Examples**" %}

\`\`\`json translate=no
{
  "A": {
    "A": null
  }
}
\`\`\`

{% endcut %}

</div>

</div>

</div>

[*Deprecated]: No longer supported, please use an alternative and newer version."
`;
